...
      <BackButton />
      <Text variant="h1" className="mb-4">
        {t('account.vehicles')}
      </Text>

      <AddButton
        testID="vehicle-add"
        title={t('account.addVehicle')}
        onPress={() => setOpen(true)}
      />

      {vehicles.isLoading ? (
        <Spinner />
...
